# mcp-lab

./: .gitignore  Dockerfile  mcp_to_api.py  pyproject.toml  test.ipynb  vivek_expense_tracking.db
clinets/: client-1.py
data/: expense.db
mcp_servers/: expense_tracker.py
mcp_servers/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
mcp_servers/UserExpenseRecordsTracking/: ExpenseTrackingCrudOPs.py
mcp_servers/expense_tracker/: expense_tracker_mcp_server.py  server_paths.txt
mcp_servers/web_search/: web_searcher-duckduckgorun.py  web_searcher.py
