[project]
name = "mcps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "fastmcp>=3.1.1",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
]
