[project]
name = "mcps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "ddgs>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.135.2",
    "fastmcp>=3.1.1",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.48",
    "uv>=0.11.7",
]
